# rust-3d-demo

./: .gitignore  Cargo.toml  README.md  index.html  index.js  notes.md  package.json  pnpm-lock.yaml  web.config  webpack.config.js
src/: app_state.rs  common_funcs.rs  constants.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  color_2d_gradient.rs  graph_3d.rs  mod.rs
src/shaders/fragment/: mod.rs
src/shaders/vertex/: color_2d.rs  color_2d_gradient.rs  graph_3d.rs  mod.rs
